--- a/TODO
+++ b/TODO
@@ -5,7 +5,9 @@ SITE
 . The first user to sign in is admin [+1] [NO, USE DATABASE]
 . Role picker for admins in public profile [+2] [DONE]
 . About me in profile [+5] [DONE]
-. Implementation of CMS module [+10]
+. Implementation of CMS module [+10] [DONE]
+. Fix redis synchronization bug [+1]
+. Rich Text Editor Raw Mode [+2]
 . Implementation of Forum module [+7]
 . Implementation of mailing module [+7]
 . Test implementation of a sales module for probing includes [+20]
@@ -31,11 +33,10 @@ EXTRA (LOW PRIORITY)
 . Implementation of flagging
 . Bans and Blocks
 
-
 SEO (LOWEST PRIORITY)
 1. SSR Implementation via constructor and SSR rules, SSR rules will be rules specific to an url
   0. Only public data, user specific data can be loaded client side
-  1. TOKEN, ID, ROLE, LANG, etc... all localstorage data is sent via cookie to create a fakeStorage where info can be fetch
+  1. TOKEN, ID, ROLE, LANG, etc... all localstorage data is sent via cookie to create a fakeStorage where info can be fetch (maybe not render these)
   2. Routes must have their own SSR rules, these SSR rules allow to set the variable global.DATA that acts as endpoint
   for initial fetching for data hydration, somehow this data must be accessible as well on the server side, where lifecycles
   do not get hit
@@ -83,3 +84,11 @@ so can safely be removed
 . Array in SQL
 . maxtags optional as maxlenght
 . mintags optional as minlenght
+
+. Add a storage location mapper
+  . every object once added gets set a storage server id, these are set by region ids or whatever, any identifier works
+  . every one of these identifiers gets its own openstack config in the sensitive config
+  . every one of these identifiers gets a uploads hostname in the standard config
+  . these id is stored as storage_id in the table and it can be set by the client during add but it's readonly after that
+  . in order for the client to choose which storage_id it wants, we need in the standard config a location mapper, for that we need
+  country code combinations and the storage_id to be used, and a default for the rest
