--- a/TODO
+++ b/TODO
@@ -1,54 +1,3 @@
-SITE
-. Update password function [+4] [DONE]
-. Public profile [+5] [DONE]
-. Location [+3] [DONE]
-. The first user to sign in is admin [+1] [NO, USE DATABASE]
-. Role picker for admins in public profile [+2] [DONE]
-. About me in profile [+5] [DONE]
-. Implementation of CMS module [+10] [DONE]
-. Fix redis synchronization bug [+1] [DONE]
-. Rich Text Editor Raw Mode [+2] [DONE]
-. Fix bug where invalid link appears [DONE]
-. Implementation of Forum module [+7]
-. Implementation of mailing module [+7]
-. Test implementation of a sales module for probing includes [+20]
-. String based total search (tags?) [+10] [DONE?]
-. Add the GLOBAL_MANAGER to the docker-compose [DONE]
-. Fix the bug where very long names for indexes will cause invalid indexes names [DONE]
-  . Add support for multiple indexes?
-. Remove normalized in currency for the client side and rather create the value during storing
-  . Client side search does not support normalized anymore
-  . SQL mantenience gets simplified as last modified value should not change after this [DONE]
-. Rewrite all the styles to use the mui-core instead
-. Fix the EXACT procedure to have two conversion ids types, so there's the EXACT search variant and the EXACT_NULL variant which
-is going to be a boolean, that is hidden by default to match only null values and use is null and only appears if the parent field is nullable
-. Fix the EXACT_AND_RANGE procedure to actually have the exact and also include the EXACT_NULL variant boolean if the field is nullable
-. In fact LOCATION_RADIUS and FTS should also have a exact null field, all of them should
+TECH
 
-ONZASYSTEMS [+3]
-. Build a Frontpage with few details
-  . en
-  . es
-  . fi
-  . ru
-  . de
-
-CYCLINGEXCHANGEHUB [+10]
-. Build Initial Frontpage
-. Bicycle Module
-
-RIDINGEXCHANGE [+5]
-. Build Initial Frontpage
-. Horse Module
-
-SITEMAPS
-. Sitemaps will work in this way, they will use a MAX_AGE value to pull resources from a table based on the created_at
-. A sitemap location will be marked as dead, and go into the dead sitemaps if it is over that and exists in the current sitemap
-. Dead and live sitemaps are actually split in pieces, they need to be tagged both as dead and live sitemaps in the XML
-. Sitemaps will be handled by a new manager, the sitemap manager,
-  we will need a sitemap manager url, and sitemap manager ip (maybe using DNS) to expose them in order to serve our sitemaps from there
-  this should give disgusing SEO capabilities
-
-EXTRA (LOW PRIORITY)
-. Implementation of flagging
-. Bans and Blocks
+Add a upgrade role functionality in the triggers themselves, so that triggers can upgrade the role
