--- a/TODO
+++ b/TODO
@@ -11,3 +11,7 @@ list in order to change everything in how realtime updates work, both in the cac
 
 DOCS
 - Write more of the docs
+
+FUTURE
+ - Better rich text integration
+ - Payment support
